--- a/src/translations/vn/global.json
+++ b/src/translations/vn/global.json
@@ -21,12 +21,28 @@
         "title": "Đến từ hợp tác - Cho sự khác biệt",
         "content": "Được thành lập vào đầu năm 2014. Qua nhiều năm hoạt động, chúng tôi đã và đang cung cấp đến khách hàng nhiều dịch vụ và sản phẩm khác nhau, chúng tôi tin chắc rằng có thể đồng hành cùng doanh nghiệp của bạn trên mọi chặn đường! Hoạt động của Đồng Sáng Việt hướng tới mục đích đáp ứng được mong muốn của khách hàng với tiêu chí: Chuyên Nghiệp, Uy Tín, Hiệu Quả và Trách Nhiệm.",
         "slogan": " \"Tạo ra giá trị cho chính mình, tạo ra giá trị cho khách hàng , tạo ra giá trị cho xã hội.\" ",
-
-        "stats":{
-            "line1": "Helping a local",
-            "line2": "business reinvent itself",
-            "line3": "We reached here with our hard work and dedication"
+        "stats": {
+            "content": {
+                "line1": "Góp sức cho",
+                "line2": "sự phát triển doanh nghiệp của bạn",
+                "line3": "Bằng tất cả niềm đam mê và nhiệt huyết"
+            },
+            "cost": {
+                "line1": "Chi phí hợp lý, minh bạch",
+                "line2": "Chi phí dịch vụ luôn được báo trước cho Khách Hàng"
+            },
+            "processing": {
+                "line1": "Tối ưu hóa quy trình",
+                "line2": "Xử lý nhanh chóng và kịp thời các vấn đề của khách hàng là ưu tiên hàng đầu của Đồng Sáng Việt"
+            },
+            "security": {
+                "line1": "Bảo mật dữ liệu",
+                "line2": "Bảo mật dữ liệu khách hàng là trách nhiệm và nghĩa vụ của chúng tôi"
+            },
+            "commitment": {
+                "line1": "Cam kết",
+                "line2": "\"Uy tín dẫn đầu chất lượng\""
+            }
         }
     }
-    
 }
